redesign/css/cyclescape.css
/* ... */
ul.deadlines .date h3, ul.deadlines .date p {display: inline; margin: 0; color: #AC3E27;}
ul.deadlines .date h3 {font-size: 22px;}
ul.deadlines .date p.time {display: block;}
ul.deadlines .content {flex: 5;}
ul.deadlines .content h2 {color: black; font-size: 18px;}
ul.deadlines .content p {margin: 0;}
ul.deadlines .actions {flex: 1; align-self: center; text-align: center;}
ul.deadlines .actions i {padding: 0;}


/* Discussion */
.discussion .content-wrapper {margin-bottom: 40px;}
.discussion img.minimap {border-radius: 50%; width: 100%;}
ul.thread {padding: 0;}
ul.thread li {display: flex; flex-direction: row; flex-wrap: wrap; border-radius: 25px; margin: 5px 0; padding: 10px 0;}
ul.thread li .poster-avatar {flex: 1;}
ul.thread li .content {flex: 15;}
ul.thread li .content, ul.thread li .poster-avatar {padding: 2px 10px;}
ul.thread li .content h3 {margin: 0; padding: 0; font-size: 14px; width: fit-content; display: inline-block;}
ul.thread li .content a.timestamp {font-style: italic; text-decoration: none; font-weight: 300; font-size: 12px; display: inline-block; padding-left: 10px; color: black;}
ul.thread li .content a.timestamp:hover {text-decoration: underline;}
ul.thread li .content .post {font-size: 14px; font-weight: 400;}
ul.thread li .content .post ul {list-style-type: circle; font-size: 14px;}
ul.thread li .content .post ul li {margin: 2.5x 0; padding: 0; display: list-item;}
ul.thread li .post-actions {align-self: flex-end; margin: 0 10px; text-align: end;}
ul.thread li .post-actions button {border: none; outline: none; background-color: #eeeeee; border: 1px solid transparent; color: #588734; border-radius: 25px; opacity: .85;}
ul.thread li .post-actions button:hover {background-color: white; border-color: #eeeeee; opacity: 1;}
ul.thread li.reply .content {border: 0.5px solid #dbdada; border-radius: 25px; padding: 5px 0 0 0; overflow: hidden;}
ul.thread li.reply:hover {background: none;}
ul.thread li.reply .reply-footer {background-color: #f6f6f6; border-top-left-radius: 25px; border-top-right-radius: 25px; padding: 5px 10px 10px;}
ul.thread li.reply ul.attachments {list-style: none; padding: 0;}
ul.thread li.reply ul.attachments li {border: 0.5px solid #185B3D; border-radius: 25px; display: inline-block; background-color: white; color: #185B3D; padding: 2.5px 10px; margin-right: 5px;}
ul.thread li.reply ul.attachments li:not(:last-child):after {padding-left: 5px; font-family: "Font Awesome 5 Pro"; font-weight: 400; content: "\f057";}
ul.thread li.reply ul.attachments li:hover {background: #f0eeee;}
ul.thread li.load-more {display: block; margin: 10px auto; width: 150px; background-color: #EEEEEE; color: #226244; border-radius: 25px; box-shadow: 2px 6px 12px -7px rgba(0,0,0,0.75); text-align: center; cursor: pointer;}
ul.thread li.load-more:hover {background-color: #FFFFFF;}
ul.thread li.load-more p {margin: 0; padding: 0; font-size: 13px;}
ul.thread a.add-content {display: inline-block; background-color: white; color: #185B3D; text-decoration: none;}
ul.thread a.add-content i {padding: 0 2.5px;}
ul.thread a.add-content:hover {background: #f0eeee;}
ul.thread .post-wrapper {text-align: right;}
ul.thread #post {display: inline-block; border: 0.5px solid #dbdada; background-color: white; color: #B2412B; outline: none; padding: 6.5px 10px; margin: 5px 0 0; border-radius: 25px; text-decoration: none;}
ul.thread #post:hover {background: #f0eeee;}
.widget .show-more {color: #555555; text-align: center; font-size: 14px; cursor: pointer;}


/* tinymce overrides */
.tox.tox-tinymce {border: none !important;}


/* New discussion */
.new-discussion .main-content form {display: grid; grid-template-columns: 150px 1fr; grid-gap: 17px;}
.new-discussion .main-content form>label {grid-column: 1 / 2; color: #185B3D; font-weight: bold;}
.new-discussion .main-content input, .new-discussion .main-content textarea {margin: 0;}
.new-discussion .main-content form>input>button {grid-column: 2 / 3;}
.new-discussion .main-content .minimap {height: 150px; width: 150px; border-radius: 100%; text-align: end; border: 1px solid transparent; cursor: pointer;}
.new-discussion .main-content .minimap:hover {box-shadow: 0 3px 8px 0 rgba(0,0,0,0.12), 0 3px 1px 0 rgba(0,0,0,0.04);}
.new-discussion div.radio {padding: 5px 20px;}
.new-discussion div.category div.widget {margin: 0;}
.new-discussion div.category.tags {background-color: #eeeeee; border-radius: 25px; padding: 10px;}
.new-discussion div.category.tags p {font-size: 12px; margin-left: 15px;}
.new-discussion div.category.tags input[type="search"] {margin-left: 10px;}
.locationModal img.map {width: 100%;}
.locationModal div.controls {position: absolute; top: 0; right: 0; padding: 20px; width: 300px; border-radius: 25px; background-color: rgba(255, 255, 255, 0.671); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); margin: 5px;}


/* Browse issues */
.browse-issues .map-controls {width: 250px;}
.browse-issues div.controls ul.map-buttons li {padding: 10px 0 10px 0; text-align: center;}
.browse-issues ul.issues {list-style-type: none; margin: 0; padding: 0;}
.browse-issues ul.issues li {display: inline-block; border-radius: 25px; cursor: pointer; margin: 5px 0; max-width: 45%; transition: .2s; min-width: 300px;}
.browse-issues ul.issues li:hover {background: #F6F6F6; }
.browse-issues ul.issues li a {display: flex; cursor: pointer; text-align: left; text-decoration: none;}
.browse-issues ul.issues li a div.minimap {flex: 1; padding: 20px 10px;}
.browse-issues ul.issues li a div.issue-content {flex: 5; padding: 10px; align-self: center;}
.browse-issues ul.issues li a div.minimap img {border-radius: 100%; width: 100px; height: 100px;}
.browse-issues ul.issues li a h2 {border: 1px solid #185B3D; border-radius: 25px; padding: 5px 10px;}
.browse-issues ul.issues li a p {color: black;}
/* ... */

